plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.ieum'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

	// ChatGPT
	implementation 'io.github.flashvayne:chatgpt-spring-boot-starter:1.0.4'
	// Spring Boot Webflux for WebClient
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	// Jackson for JSON parsing
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	// Optional: Spring Boot Actuator for additional monitoring and health checks
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Excel
	implementation 'org.apache.poi:poi:5.2.3' // Core Apache POI
	implementation 'org.apache.poi:poi-ooxml:5.2.3' // For Excel .xlsx support
}

tasks.named('test') {
	useJUnitPlatform()
}
